# stmheavymetal

./: .gitignore  CMakeLists.txt  openocd.cfg  stm32.ld  stmbaremetal.code-workspace
src/: init_ctor.cpp  init_ram.cpp  main.c  main.cpp  main.s  openocd.cfg  reset_handler.cpp  reset_vector.cpp  startup.c  syscalls.cpp
